cluster/apps/filebrowser/networkpolicies/ingress-nginx-egress-filebrowser.yaml
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: ingress-nginx-egress-filebrowser
  namespace: ingress-nginx
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/component: controller
      app.kubernetes.io/instance: ingress-nginx
      app.kubernetes.io/name: ingress-nginx
  egress:
    - toEndpoints:
        - matchLabels:
            app: filebrowser
            "k8s:io.kubernetes.pod.namespace": filebrowser
      toPorts:
        - ports:
            - port: "8080"
              protocol: TCP
